feat: add vnpay deeplink gen

--- a/apps/views/index.handlebars
+++ b/apps/views/index.handlebars
@@ -40,6 +40,7 @@
             <button type="button" onclick="pasteImage()">Paste Image</button>
             <input name="code" id="code" value="" placeholder="emv code value">
             <button type="button" onclick="checkEmvCode()">Beautify</button>
+            <button type="button" onclick="genVNPayDeeplink()">VNPay Deeplink</button>
             <img id="qr" src=''/>
             <div id="formated"></div>
         </div>
